RAP-2233 Fixing Content Search Results Layout Issues

--- a/app_storefront_core/cartridge/scss/default/_responsive.scss
+++ b/app_storefront_core/cartridge/scss/default/_responsive.scss
@@ -392,25 +392,6 @@
 	#preferred-store-panel input[type="text"] {
 		width: 49.5966%;
 	}
-
-	.pt_content-search-result{
-		.folder-content-list{
-			li{
-				float: none;
-				width: 100%;
-				clear: both;
-			}
-		}
-		.pagination{
-			clear: both;
-			float: none;
-			.results-hits{
-				float:none;
-			}
-		}
-	}
-
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 959px) {
@@ -419,10 +400,6 @@
 	}
 	.primary-content {
 		width: 588px;
-	}
-	.page-content .primary-content {
-		padding-left: 14px;
-		width: 574px;
 	}
 	.primary-focus {
 		.primary-content {
@@ -520,21 +497,5 @@
 @media screen and (max-width: 480px) {
 	#preferred-store-panel input[type="text"] {
 		width: 49.5966%;
-	}
-	.pt_content-search-result{
-		.folder-content-list{
-			li{
-				float: none;
-				width: 100%;
-				clear: both;
-			}
-		}
-		.pagination{
-			clear: both;
-			float: none;
-			.results-hits{
-				float:none;
-			}
-		}
 	}
 }
